# go-db-example

./: .gitignore  .gitmodules  README.md  WORKSPACE
examples/confluent_kafka/: BUILD.bazel  confluent_kafka.go  main.go
examples/kafka/: BUILD.bazel  kafka.go  main.go
examples/mongo/: BUILD.bazel  main.go
examples/redis/: BUILD.bazel
