load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_binary(
  name = "redis_example",
  srcs = ["main.go"],
  deps = [
    "@github_com_mediocregopher_radix_v2//redis:go_default_library",
  ],
  importpath = "github.com/si-you/go-db-example/examples/redis",
)
